---
title: ログイン処理 クラス図
---
classDiagram
    direction LR
    class LoginServlet {
        +doGet(req, resp)
        +doPost(req, resp)
    }
    class MemberService {
        +login(email, password) MemberDTO
    }
    class MemberDAO {
        +findByEmail(email) MemberDTO
    }
    class MemberDTO {
        -int memberId
        -String email
        -String password
        -String role
        +isAdmin() boolean
    }
    class DBConnection {
        +getConnection() Connection$
    }
    LoginServlet ..> MemberService : login 呼び出し
    LoginServlet ..> MemberDTO : セッションに保存
    MemberService --> MemberDAO : findByEmail
    MemberService ..> MemberDTO : 平文パスワード比較
    MemberDAO --> DBConnection : 接続取得
    MemberDAO ..> MemberDTO : 生成
